--- a/ui/index.html
+++ b/ui/index.html
@@ -13,8 +13,8 @@
 		<!-- Latest compiled JavaScript -->
 		<script src="js/bootstrap.min.js"></script>
 
-		<script src="/js/index.js"></script>
-		<link rel="shortcut icon" href="/img/favicon.png">
+		<script src="js/index.js"></script>
+		<link rel="shortcut icon" href="img/favicon.png">
 
 		<style>
 			body {
@@ -35,7 +35,7 @@
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
-					<a class="navbar-brand"><img id="logo" height=30 src="/img/logo.svg"></img></a>
+					<a class="navbar-brand"><img id="logo" height=30 src="img/logo.svg"></img></a>
 					<a class="navbar-brand">resin.io</a>
 				</div>
 			</div>
@@ -49,7 +49,7 @@
 			</div>
 			<div class="row before-submit">
 				<div class="col-lg-8 col-lg-offset-2">
-					<form class="form form-horizontal" id='connect-form' action='/connect' method='post'>
+					<form class="form form-horizontal" id='connect-form' action='connect' method='post'>
 						<div class="form-group">
 							<label for="ssid-select" class="control-label col-lg-2">SSID</label>
 							<div class="col-lg-6">
