--- a/ui/index.html
+++ b/ui/index.html
@@ -36,7 +36,7 @@
 			<div class="container">
 				<div class="navbar-header">
 					<a class="navbar-brand"><img id="logo" height=30 src="img/logo.svg"></img></a>
-					<a class="navbar-brand">resin.io</a>
+					<a class="navbar-brand">Halley Hub WiFi Connect</a>
 				</div>
 			</div>
 		</nav>
@@ -44,7 +44,7 @@
 		<div class="container">
 			<div class="row before-submit">
 				<div class="col-lg-8 col-lg-offset-2">
-					<h3>Hi! Please choose your wifi from the list.</h3>
+					<h3>Hi! Please choose your WiFi Network from the list.</h3>
 				</div>
 			</div>
 			<div class="row before-submit">
@@ -57,13 +57,13 @@
 							</div>
 						</div>
 						<div class="form-group" id="identity-group">
-							<label for="identity" class="control-label col-lg-2">user</label>
+							<label for="identity" class="control-label col-lg-2">User</label>
 							<div class="col-lg-6">
 								<input class="form-control" name="identity"></input>
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="passphrase" class="control-label col-lg-2">passphrase</label>
+							<label for="passphrase" class="control-label col-lg-2">Passphrase</label>
 							<div class="col-lg-6">
 								<input type='password' class="form-control" name='passphrase'></input>
 							</div>
@@ -84,7 +84,7 @@
 			</div>
 			<div class="row hidden" id='no-networks-message'>
 				<div class="col-lg-8 col-lg-offset-2">
-					<h3>No wifi networks available</h3>
+					<h3>No WiFi networks available</h3>
 					<p>Please ensure there is a network within range and reboot the device.</p>
 				</div>
 			</div>
