--- a/ui/index.html
+++ b/ui/index.html
@@ -4,6 +4,10 @@
 		<title>WiFi Connect</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
+		<!-- 
+			Contains code from balena-wifi-connect licensed under Apache License 2.0 (available at http://www.apache.org/licenses/)
+		-->
+
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 
