--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,7 @@
 		<script src="js/bootstrap.min.js"></script>
 
 		<script src="js/index.js"></script>
-		<link rel="shortcut icon" href="img/favicon.png">
+		<link rel="shortcut icon" href="img/favicon.ico">
 
 		<style>
 			body {
