--- a/ui/index.html
+++ b/ui/index.html
@@ -32,6 +32,10 @@
 			button {
 				margin-top: 7px;
 			}
+
+			#ssid-manual, #btn-ssid-list {
+				display: none;
+			}
 		</style>
 	</head>
 
@@ -54,22 +58,27 @@
 			<div class="row before-submit">
 				<div class="col-lg-8 col-lg-offset-2">
 					<form class="form form-horizontal" id='connect-form' action='connect' method='post'>
+						<input type="hidden" name="ssid">
 						<div class="form-group">
 							<label for="ssid-select" class="control-label col-lg-2">SSID</label>
 							<div class="col-lg-6">
-								<select id='ssid-select' class="form-control" name='ssid'></select>
+								<select id='ssid-select' class="form-control ssid-input"></select>
+								<button id="btn-ssid-manual" class='btn btn-warn'>Manual</button>
+
+								<input id='ssid-manual' class="form-control ssid-input">
+								<button id="btn-ssid-list" class='btn btn-warn'>Select from List</button>
 							</div>
 						</div>
 						<div class="form-group" id="identity-group">
-							<label for="identity" class="control-label col-lg-2">User</label>
+							<label for="identity" class="control-label col-lg-2">User (Enterprise Only)</label>
 							<div class="col-lg-6">
-								<input class="form-control" name="identity"></input>
+								<input class="form-control" name="identity">
 							</div>
 						</div>
 						<div class="form-group">
 							<label for="passphrase" class="control-label col-lg-2">Passphrase</label>
 							<div class="col-lg-6">
-								<input type='password' class="form-control" name='passphrase'></input>
+								<input type='password' class="form-control" name='passphrase'>
 							</div>
 						</div>
 						<div class="form-group">
