reduce memory usage
UI now served by nginx (saves 400kb / 10% on x64)

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,16 +9,15 @@
 		-->
 
 		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="resources/bootstrap.min.css">
 
 		<!-- jQuery library -->
-		<script src="js/jquery.min.js"></script>
+		<script src="resources/jquery.min.js"></script>
 
 		<!-- Latest compiled JavaScript -->
-		<script src="js/bootstrap.min.js"></script>
+		<script src="resources/bootstrap.min.js"></script>
 
-		<script src="js/index.js"></script>
-		<link rel="shortcut icon" href="img/favicon.ico">
+		<script src="resources/index.js"></script>
 
 		<style>
 			body {
@@ -47,7 +46,7 @@
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
-					<a class="navbar-brand"><img id="logo" height=30 src="img/logo.svg"></img></a>
+					<a class="navbar-brand"><img id="logo" height=30 src="resources/logo.svg"></img></a>
 					<a class="navbar-brand">Halley Hub WiFi Connect</a>
 				</div>
 			</div>
